# fx-collection-rs

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  fx-collection-rs_bindings.h
src/: cbindings.rs  detail.rs  lib.rs  shuffle_note.rs  stereo_delay.rs  trance_gate.rs
src/detail/: mod.rs  shuffle_note.rs
src/stereo_delay/: delay_line.rs  delay_line_heads.rs
src/trance_gate/: step.rs
tests/: trance_gate_test.rs
