[package]
name = "fx-collection-rs"
version = "0.1.0"
authors = ["René Hansen <rene@hansen-audio.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = "0.20.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
dsp-tool-box-rs = { git = "https://github.com/hansen-audio/dsp-tool-box-rs.git", branch = "main"}
