[package]
name = "fx-collection-rs"
version = "0.1.0"
authors = ["René Hansen <rene@hansen-audio.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = "0.20.0"

[lib]
crate-type = ["staticlib"] # Create a static C lib.

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic

[dependencies]
dsp-tool-box-rs = { git = "https://github.com/hansen-audio/dsp-tool-box-rs.git", branch = "main" }
