[package]
name = "fx_collection_rs"
version = "0.1.0"
authors = ["René Hansen <rene@hansen-audio.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = "0.28.0"

[lib]
crate-type = ["staticlib"] # Create a static C lib.
# Create type 'lib' makes the benchmark worse for Rust code, to be investigated!
# crate-type = ["lib"] 

[profile.release]
# strip = true      # Automatically strip symbols from the binary.
# lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
# opt-level = "z"   # Optimize for size.

[dependencies]
dsp_tool_box_rs = { git = "https://github.com/hansen-audio/dsp-tool-box-rs.git", branch = "main" }
